# epistemo

./: .gitignore  README.md  app.py  cli.py  main.py  prompts.py  pyproject.toml  requirements.txt  snapshot_operations.py  web_operations.py
api/: __init__.py  research.py
cli/: __init__.py  interface.py
config/: __init__.py  settings.py
core/: __init__.py  graph_builder.py  state.py
models/: __init__.py  schemas.py
services/: __init__.py  analysis_service.py  base_service.py  search_service.py  web_operations.py
ui/: __init__.py  chat_interface.py
utils/: __init__.py  logger.py  prompts.py  snapshot_operations.py
